# llvm-pass-tutorial

./: README.md
project/: CMakeLists.txt  pass的三种编译方式.md
project/Obfuscation/: BogusControlFlow.cpp  BogusControlFlow_withoutdebug.cpp  CMakeLists.txt  Flattening.cpp  Hello.cpp  MyObfPass01.cpp  MyObfPass02.cpp  MyObfPass03.cpp  ObfuscateZero.cpp  OpcodeCounter.cpp  SimpleInvoker.cpp  SplitBasicBlocks.cpp  StringObfuscation.cpp  Substitution.cpp
project/Obfuscation/include/: Substitution.h
project/test/: testFlat.c  testHello.c  testMyObfPass.c  testOpcodeCounter.c  testSimpleInvoker.c
